# tty-gateway

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: ci.yml
crates/gw-core/: Cargo.toml
crates/gw-core/src/: lib.rs  quota.rs
crates/gw-proto/: Cargo.toml
crates/gw-proto/src/: codec.rs  frame.rs  lib.rs
crates/gw-server/: Cargo.toml
crates/gw-server/src/: config.rs  handler.rs  http_hook.rs  lib.rs  main.rs
crates/gw-ssh/: Cargo.toml
crates/gw-ssh/src/: lib.rs
crates/gw-transport/: Cargo.toml
crates/gw-transport/src/: client.rs  framed.rs  lib.rs  server.rs  tls.rs
crates/gw-transport/tests/: echo.rs
deploy/: Dockerfile  Dockerfile.cached  README.md  docker-compose.yml  prod-build.sh  shark-gateway.example.toml  shark-gateway.prod.toml
