[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/aeieli/tty-gateway"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }

gw-proto = { path = "crates/gw-proto" }
gw-transport = { path = "crates/gw-transport" }
gw-ssh = { path = "crates/gw-ssh" }
gw-core = { path = "crates/gw-core" }
