[package]
name = "gw-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The shark-gateway daemon."
default-run = "shark-gateway"

[[bin]]
name = "shark-gateway"
path = "src/main.rs"

[dependencies]
gw-proto = { workspace = true }
gw-transport = { workspace = true }
gw-core = { workspace = true }
gw-ssh = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
