[package]
name = "gw-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SSH client that connects the gateway to a target host."

[dependencies]
gw-proto = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
russh = "0.54"
